# ParamZX

./: .gitignore  pyproject.toml
pyzx/: pyproject.toml  setup.py
pyzx/graph/: base.py  scalar.py
pyzx/simulation/: circs.py  circuit.py  compile.py  evaluate.py  gen.py  msd.py  msd_eval.py  param_eval.py  random.py  sampler.py  simplify.py  stab.py  tictoc.py
